# jogo_bruno_ricardo

./: README.md  pyproject.toml
jogo_bruno_ricardo/: __init__.py
script/: __init__.py
